[package]
name = "Wizard101Launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libdeflater = "0.14.0"
roxmltree = "0.18.0"
sha2 = "0.10.6"
twofish = "0.7.1"
ofb = "0.6.1"
flame = "0.2.2"
flamer = "0.5"
eio = "0.1.2"
num-traits = "0.2"
num-derive = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
indicatif = "0.17.3"
futures-util = "0.3.28"
tokio = { version = "1.28.1", features = ["macros"] }
chrono = "0.4"
base64 = "0.21.0"
async-process = "1.7.0"
dependency-graph = "0.1.5"